Fixing html image import path

--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -5,7 +5,7 @@
     align-items: center
 
 @mixin background-image($img, $background-position:center)
-    background-image: url('/static/img/#{$img}')
+    background-image: url('../img/#{$img}')
     background-repeat: no-repeat
     background-position: $background-position
     background-size: cover
